BLOB write
