# src/handlers/blob.go
@@ -1,7 +1,9 @@
 package handlers
 
 import (
+	"io"
 	"net/http"
+	"sql-proxy/src/app"
 	"sql-proxy/src/db"
 )
 
@@ -36,6 +38,57 @@ func ReadBlob(w http.ResponseWriter, r *http.Request) {
 
 func WriteBlob(w http.ResponseWriter, r *http.Request) {
 
-	// TO DO
+	if ok := checkApiVersion(w, r); !ok {
+		return
+	}
+
+	maxSize := int64(32 << 20) // 32 MB, change here if required
+	connId, sqlQuery, data, ok := parseQueryHttpHeadersAndMultipartBody(r, maxSize)
+	if !ok {
+		errorResponce(w, "Bad request", http.StatusBadRequest)
+		return
+	}
+
+	dbConn, ok := db.Handler.GetById(connId, true)
+	if !ok {
+		errorResponce(w, "Invalid connection id", http.StatusForbidden)
+		return
+	}
+
+	_, err := dbConn.Exec(sqlQuery, data)
+	if err != nil {
+		errorResponce(w, err.Error(), http.StatusBadRequest)
+	}
+
+}
+
+func parseQueryHttpHeadersAndMultipartBody(r *http.Request, maxSize int64) (string, string, []byte, bool) {
+
+	connId := r.Header.Get("Connection-Id")
+
+	err := r.ParseMultipartForm(maxSize)
+	if err != nil {
+		return "", "", nil, false
+	}
+
+	sqlQuery := r.FormValue("sql_query")
+	if sqlQuery == "" {
+		return "", "", nil, false
+	}
+
+	file, _, err := r.FormFile("binary_data")
+	if err != nil {
+		return "", "", nil, false
+	}
+	defer file.Close()
+
+	data, err := io.ReadAll(file)
+	if err != nil {
+		return "", "", nil, false
+	}
+
+	app.Logger.Debugf("SQL query received: sql=%s, connection_id=%s", sqlQuery, connId)
+
+	return connId, sqlQuery, data, true
 
 }
